# Bedrock

./: .cursorrules  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  1.md  2.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING_DEPENDENCIES.md  baseline_backtest_id.txt  baseline_metrics_numpy2.2.6_pandas2.3.2.json  baseline_trades_numpy2.2.6_pandas2.3.2.json  docker-compose.yml  pyproject.toml  tasks_hierarchy.json  加密货币交易平台任务规划__2025-11-09T13-34-12.md
.augment/rules/: architecture.md
database_migrations/: alembic.ini
database_migrations/alembic/: env.py
database_migrations/alembic/versions/: 20251110_0350_30eb898ddf84_datahub_add_kline_and_onchain_models.py  20251110_1626_ab79d1c7c055_create_signals_table_for_decisionengine_.py  20251110_2100_create_portfolio_tables.py  20251111_0000_create_backtesting_tables.py  20251112_1400_decision_engine_add_arbitration_config.py  20251116_0000_add_strategy_type_to_backtest_runs.py  20251116_1600_update_arbiter_weights.py  20251116_2000_decision_engine_add_funding_rate_fields.py  20251117_2100_add_llm_sentiment_score.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BASELINE_METRICS_NUMPY2.2.6_PANDAS2.3.2.md  DATABASE_MIGRATION_COORDINATION.md  DATA_MODEL_AND_API_CONTRACT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_MAINTENANCE.md  ENVIRONMENT_VARIABLES.md  FUNDING_RATE_STRATEGY.md  ML_MODEL_FEATURES.md  OPERATIONS_GUIDE.md  PHASE3_VERIFICATION_FINAL_REPORT.md  PHASE3_VERIFICATION_FINAL_REPORT_PART2.md  TESTING_STRATEGY.md
scripts/: analyze_data_overlap.py  collect_bnb_sol_ada_2023_data.py  collect_btc_eth_2023_data.py  collect_btc_eth_missing_data.py  collect_historical_data.py  collect_historical_data_batch.py  collect_historical_klines.py  create_test_signal_with_ml_llm.py  data_collection_report.json  data_validation_report.json  generate_signal.json  init_arbiter_config.py  run_migration_20251116_1600.py  test_backtest.json  validate_2024_klines.py  validate_env.py  verify_baseline_metrics.py  verify_funding_rate_data.py
services/backtesting/: Dockerfile  pytest.ini  requirements.txt
services/backtesting/app/: __init__.py  main.py
services/backtesting/tests/: __init__.py  conftest.py
services/datahub/: Dockerfile  pytest.ini  requirements.txt
services/datahub/app/: __init__.py  error_handlers.py  exceptions.py  main.py
services/datahub/tests/: FINAL_TEST_SUMMARY.md  TEST_FIX_PROGRESS.md  __init__.py  conftest.py
services/decision_engine/: Dockerfile  IMPLEMENTATION_SUMMARY.md  pytest.ini  requirements.txt
services/decision_engine/app/: __init__.py  main.py
services/decision_engine/docs/: MODEL_DEGRADATION_STRATEGY.md  MODEL_DEPLOYMENT_GUIDE.md  PHASE3_EXECUTION_SUMMARY.md  TD-002_Stage2_CrossPairFeatures.md  stability_validation_execution_guide.md  stability_validation_implementation.md
services/decision_engine/scripts/: aggregate_4h_klines.py  analyze_feature_importance_v2_7.py  analyze_stability.py  (+19 more)
services/portfolio/: Dockerfile  pytest.ini  requirements.txt
shared/: requirements.txt
shared/utils/: __init__.py  database.py  exceptions.py  helpers.py  logger.py  redis_client.py
webapp/: .env.development  .env.production  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
webapp/src/: App.tsx  main.tsx  vite-env.d.ts
webapp/tests/: setup.ts
(+166 files in other folders)
